July 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/plugins.c: #ifdef'ed out the currently unused Sio1 API.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * win32/gui/AboutDlg.c: Minor text change.
 * po/pcsx.pot, po/*.po: Updated.
 * libpcsxcore/socket.c: Fixed FTBFS on FreeBSD.
 * configure.ac: Likewise.
 * gui/Makefile.am: Likewise.
 * plugins/dfcdrom/cdr-null.c: Likewise.
 * libpcsxcore/plugins.c: Fixed plugin loading with FreeBSD.

July 4, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/plugins.c: GPUvBlank (for gpuBladeSoft now, experimental).
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.

July 3, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxhw.c: Sio1 interface (link cable).
 * libpcsxcore/plugins.c: Likewise.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.

July 2, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdriso.c: Fixed subchannel data handling with images ripped
   with cdrdao. Removed support for AcetoneISO. Parse .cue file as .toc file
   when needed to satisfy some stupid tutorials which tell users to use cdrdao
   to rip a "bin/cue" image which is in fact a "bin/toc" image.

July 2, 2010 edgbla <edgbla@yandex.ru>

 * po/ru_RU.po: Updated.
 
July 1, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdriso.c: Added support for images ripped with cdrdao with
   "--read-subchan rw_raw" for subchannel data.
 * po/pcsx.pot, po/*.po: Updated.

Jun 30, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/PcsxController.m: Default dynarec to off until it's actually working
   for Mac OS X :(

Jun 29, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/gui/plugin.c: Close PAD plugins before other plugins and don't check
   return value for PADclose(), which should fix issues with LilyPad.
 * plugins/dfxvideo/gpu.c: Added 'fake gpu busy' hack and GPUsetFix() API
   from P.E.Op.S Soft GPU 1.18.